--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/js/login_config.js": "/js/login_config.js",
     "/js/register_config.js": "/js/register_config.js"
 }
